lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:3: error: illegal start of simple expression
while(getY()>0)#[{
               ^