lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
def step(){
while(getY()>0)#[{
	if(getVitesseY()>10){
		setPousseeDesiree(getPoussee()+1)
	}
}
}
